# spannerplan-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  DISTRIBUTION.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: bindings.yml  ci.yml  examples-smoke.yml  parity-canary.yml  release-ffi.yml  release.yml
bindings/: README.md
bindings/cpp/: CMakeLists.txt  README.md  main.cpp  rendertree.cpp  test_golden.cpp
bindings/dotnet/: README.md  SpannerPlan.sln
bindings/dotnet/src/SpannerPlan/: PlanRenderer.cs  RenderConfig.cs  RenderError.cs  SpannerPlan.csproj  SpannerPlanLibrary.cs  SpannerPlanNative.cs
bindings/dotnet/src/SpannerPlan.Cli/: Program.cs  SpannerPlan.Cli.csproj
bindings/dotnet/tests/SpannerPlan.Tests/: RenderTests.cs  SpannerPlan.Tests.csproj  TestPaths.cs
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/io/spannerplan/: RenderError.java  Rendertree.java  Spannerplan.java  SpannerplanNative.java
bindings/java/src/test/java/io/spannerplan/: RenderTest.java  RendertreeTest.java
bindings/php/: README.md  composer.json  test_render.php
bindings/php/src/: Spannerplan.php
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/src/spannerplan/: __init__.py  cli.py
bindings/python/tests/: test_cli.py  test_render.py
bindings/ruby/: README.md  spannerplan.gemspec
bindings/ruby/lib/: spannerplan.rb
bindings/ruby/test/: test_render.rb
crates/spannerplan/: Cargo.toml
crates/spannerplan-cli/: Cargo.toml
crates/spannerplan-cli/src/: lib.rs  main.rs
crates/spannerplan-core/: Cargo.toml  build.rs
crates/spannerplan-core/src/: asciitable.rs  lib.rs  model.rs  plantree.rs  queryplan.rs  reference.rs  scalarappendix.rs  stats.rs  textwidth.rs  treerender.rs  wire.rs
crates/spannerplan-ffi/: Cargo.toml  build.rs  cbindgen.toml  spannerplan.h
crates/spannerplan-ffi/src/: lib.rs
crates/spannerplan-ffi/tests/: smoke.py
crates/spannerplan-wasm/: Cargo.toml  LICENSE
crates/spannerplan-wasm/src/: lib.rs
crates/spannerplan/examples/: gen_wire_fixtures.rs
crates/spannerplan/src/: extract.rs  extract_json.rs  lib.rs
crates/spannerplan/tests/: plantree_dca.rs  reference_golden.rs  render_config_schema.rs  structural_signature.rs  wire_parity.rs
examples/spanner-client/: .env.example  .gitignore  README.md  query.sql  run-examples.sh  vcpkg-detect.sh
examples/spanner-client/cpp/: CMakeLists.txt  analyze_and_render.cpp  cli_options.cpp  cli_options.hpp  run.sh  vcpkg.json
examples/spanner-client/dotnet/: AnalyzeAndRender.csproj  Program.cs
examples/spanner-client/go/: go.mod  go.sum  main.go
examples/spanner-client/java/: maven-opts.sh  pom.xml  run.sh
examples/spanner-client/java/src/main/java/io/spannerplan/examples/: AnalyzeAndRender.java  CliOptions.java  QueryModeOption.java  SpannerAdapter.java
examples/spanner-client/node/: analyze_and_render.mjs  cli_options.mjs  package-lock.json  package.json  query_mode.mjs  spanner_adapter.mjs
examples/spanner-client/php/: analyze_and_render.php  cli_options.php  composer.json  run.sh  spanner_adapter.php
examples/spanner-client/python/: analyze_and_render.py  cli_options.py  query_mode.py  requirements.txt  run.sh  spanner_adapter.py
examples/spanner-client/ruby/: Gemfile  analyze_and_render.rb  cli_options.rb  query_mode_option.rb  run.sh  spanner_adapter.rb
examples/spanner-client/rust/: Cargo.toml
examples/spanner-client/rust/src/: main.rs
js/: .gitignore  README.md  package-lock.json  package.json
js/examples/release-browser-smoke/: index.html  main.js  server.mjs
js/examples/rendertree-web/: README.md  index.html  main.ts  package.json  vite.config.ts
js/scripts/: verify-release-js-tarballs.sh
lab/genrsgolden/: README.md
lab/genstructuredgolden/: README.md  go.mod  go.sum  main.go
lab/wasm-renderer-only/: Cargo.toml
lab/wasm-renderer-only/src/: lib.rs
proto/: README.md
proto/google/protobuf/: struct.proto
proto/google/spanner/v1/: query_plan.proto  result_set.proto
schema/: README.md  plantree-rows-v1.schema.json  plantree-rows-v1alpha2.internal.schema.json  render-config.example.json  render-config.schema.json
scripts/: build-wasm.sh  check-cbindgen.sh  check-release-docs.sh  download-release-assets.sh  measure-wasm-sizes.sh  resolve-release-id.sh  test-download-release-assets.sh  test-release-workflow.sh  test-resolve-release-id.sh  test-verify-release-checksums.sh  verify-release-checksums.sh  verify-release-consumers.sh  verify-release-version.sh
testdata/: PROVENANCE.md  README.md
testdata/golden/: dca.signature.txt  dca_auto_compact.txt  dca_auto_current.txt  dca_auto_traditional.txt  dca_plan_compact.txt  dca_plan_current.txt  dca_plan_current_print_full.txt  dca_plan_current_print_typed.txt  dca_plan_current_wrap50_hanging.txt  dca_plan_traditional.txt  dca_plantree_rows_current.json  dca_rendertree_plan.txt  dcaplan_auto_compact.txt  dcaplan_auto_current.txt  dcaplan_auto_traditional.txt  dcaplan_plan_current_print_full.txt  dcaplan_plan_current_print_typed.txt  dcaplan_plan_current_wrap50.txt  dcaplan_plan_current_wrap50_hanging.txt  dcaplan_plan_current_wrap80.txt  dcaplan_plantree_rows_current.json  dcaplan_profile_compact.txt  dcaplan_profile_current.txt  dcaplan_profile_traditional.txt
testdata/reference/: dca.yaml
testdata/rendertree/: delete.yaml
testdata/wire/: README.md
