[workspace]
resolver = "2"
members = [
    "crates/spannerplan-core",
    "crates/spannerplan",
    "crates/spannerplan-cli",
    "crates/spannerplan-ffi",
    "crates/spannerplan-wasm",
]

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/apstndb/spannerplan-rs"
authors = ["apstndb"]

[workspace.dependencies]
prost = "0.14"
serde_json = "1"
