[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spannerplan"
version = "0.1.0-alpha.2"
description = "Render Cloud Spanner query plans as ASCII tables (FFI-backed)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "apstndb" }]
keywords = ["spanner", "query-plan", "ffi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # Uncomment per wheel flavor when publishing to PyPI:
  # "Operating System :: POSIX :: Linux",
  # "Operating System :: MacOS",
  # "Operating System :: Microsoft :: Windows",
  # "Environment :: MacOS X",
  # "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
rendertree = "spannerplan.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
