[package]
name = "spannerplan-ffi"
description = "C ABI bindings for spannerplan-rs (cdylib)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spannerplan = { path = "../spannerplan", features = ["yaml", "wire"] }
serde_json.workspace = true

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
libc = "0.2"
prost.workspace = true
cbindgen = "0.29"
