[package]
name = "spannerplan"
description = "std convenience layer for spannerplan-core: YAML/JSON input decoding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["spanner", "query-plan", "google-cloud"]
categories = ["parsing"]
publish = false

[dependencies]
spannerplan-core = { version = "0.1.0-alpha.3", path = "../spannerplan-core", features = ["serde"] }
serde_json = "1"
serde_yaml_ng = { version = "0.10", optional = true }

[features]
default = ["yaml", "wire"]
yaml = ["dep:serde_yaml_ng"]
wire = ["spannerplan-core/wire"]

[[example]]
name = "gen_wire_fixtures"

[dev-dependencies]
prost.workspace = true
serde_json.workspace = true
