# One-off size probe: renderer accepts only Vec<PlanNode> from the host (no JSON/YAML/wire decode).
[package]
name = "spannerplan-wasm-renderer-only"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
spannerplan-core = { path = "../../crates/spannerplan-core", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
