[package]
name = "spanner-client-example"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
publish = false

[workspace]

[dependencies]
spannerplan = { path = "../../../crates/spannerplan", default-features = false, features = ["wire"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
google-cloud-spanner = "0.34.3-preview"
google-cloud-googleapis = { version = "0.16", features = ["spanner"] }
prost = "0.13"
prost-types = "0.13"
serde_json = "1"
